[package]
name = "fakecamera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
async-stream = "0.3.3"
clap = { version = "4.0.29", features = ["derive"] }
bytes = "1.3.0"
futures-util = "0.3.25"
http = "0.2.8"
mimalloc = "0.1.32"
mime = "0.3.16"
multipart-stream = "0.1.2"
